test: Add a pytest section to tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -23,3 +23,8 @@ commands = nb-clean {posargs}
 deps =
     typos ~= 1.16.0
 commands = typos {posargs}
+
+[testenv:pytest]
+deps =
+    -r dev-requirements.txt
+commands = pytest {posargs}
