chore: Add pytest config to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,3 +28,8 @@ ignore = [
   "E402", # module-import-not-at-top-of-file: It's relatively common to have to import "just in time"
   "E501", # line-too-long: Let black handle this
 ]
+
+[tool.pytest.ini_options]
+console_output_style = "count"
+addopts = "--strict-markers"
+testpaths = ["scenarios"]
