--- a/.github/workflows/run-samples.yml
+++ b/.github/workflows/run-samples.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
     paths:
-      - notebooks/**
+      - scenarios/**
       - .infra/deployments/**/*.bicep
 jobs:
   run-samples:
